[package]
name = "decimal-scaled-bench-compare"
version = "0.0.0"
edition = "2024"
publish = false

# Standalone Cargo project (NOT a workspace member of the parent crate).
# Benches TWO versions of `decimal-scaled` side by side in ONE run:
#   * `decimal_scaled`   — the branch under test, via the `path = ".."` dep
#                          (whatever branch this sub-crate is checked out on).
#   * `prod`             — the latest published release ("production"),
#                          consumed as a plain external library (renamed package).
# The harness (benches/compare_common.rs + the per-width compare_d{N}.rs
# targets) is identical for both — it just runs each version's types through
# the same arithmetic ops. It is split one bench target per width so each
# width runs as its own parallel CI job (wall time ≈ the slowest single
# width, not one >90 min sweep over every width).
# No third-party decimal crates: this is a pure self-vs-self comparison
# (the branch vs the most recent published tag).

[dependencies]
# Branch under test (head), via the local checkout.
decimal-scaled = { path = "..", default-features = false, features = ["std", "strict", "wide", "x-wide", "xx-wide"] }
# Baseline = the latest published tag, as an external library under a distinct
# crate name. The version below is a sane local default; bench-branch-compare.yml
# rewrites it to the newest published version at run time.
prod = { package = "decimal-scaled", version = "0.4.4", default-features = false, features = ["std", "strict", "wide", "x-wide", "xx-wide"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

# One bench target per width — matrixed across parallel CI jobs. Each
# instantiates the shared surface (branch + prod rows) for its one width.
[[bench]]
name = "compare_d18"
harness = false

[[bench]]
name = "compare_d38"
harness = false

[[bench]]
name = "compare_d57"
harness = false

[[bench]]
name = "compare_d76"
harness = false

[[bench]]
name = "compare_d115"
harness = false

[[bench]]
name = "compare_d153"
harness = false

[[bench]]
name = "compare_d230"
harness = false

[[bench]]
name = "compare_d307"
harness = false

[[bench]]
name = "compare_d462"
harness = false

[[bench]]
name = "compare_d616"
harness = false

[[bench]]
name = "compare_d924"
harness = false

[[bench]]
name = "compare_d1232"
harness = false

# Empty [workspace] table keeps this project OUT of the parent crate's
# workspace so the `path` dep and the version-pinned dep don't fight.
[workspace]
