[package]
name = "decimal-scale-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "decimal-scaled test subjects + filterable golden gate over the decimal-scaled-golden harness"
license = "MIT OR Apache-2.0"

# This crate hosts the full-surface golden gate plus the consolidated
# integration suite. Features are pure passthroughs to the root crate so
# every moved test keeps its original feature semantics (including the
# default-feature narrow build CI leg).
[dependencies]
decimal-scaled = { path = "..", default-features = false }
decimal-scaled-golden = { path = "../decimal-scaled-golden" }

[dev-dependencies]
# Property-based fuzz coverage for the strict transcendentals — see
# tests/proptest_identities.rs. Pinned 1.x for deterministic, fixed-seed
# minimisation when a counterexample is found.
proptest = "1"

[features]
default  = ["std"]
std      = ["decimal-scaled/std"]
alloc    = ["decimal-scaled/alloc"]
wide     = ["decimal-scaled/wide"]
x-wide   = ["decimal-scaled/x-wide"]
xx-wide  = ["decimal-scaled/xx-wide"]
macros   = ["decimal-scaled/macros"]
serde    = ["decimal-scaled/serde"]
dyn      = ["decimal-scaled/dyn"]
strict   = ["decimal-scaled/strict"]
fast     = ["decimal-scaled/fast"]
cross-scale-ops = ["decimal-scaled/cross-scale-ops"]
rounding-half-away-from-zero = ["decimal-scaled/rounding-half-away-from-zero"]
rounding-half-toward-zero = ["decimal-scaled/rounding-half-toward-zero"]
rounding-trunc = ["decimal-scaled/rounding-trunc"]
rounding-floor = ["decimal-scaled/rounding-floor"]
rounding-ceiling = ["decimal-scaled/rounding-ceiling"]

# The golden gate stays full-width: the whole point of the gate is the
# wide surface, so it pins its tier requirement here while the rest of
# the crate can build narrow.
[[test]]
name = "golden"
required-features = ["wide", "x-wide", "xx-wide"]

# `sanity` exercises the EXACT (non-transcendental) decimal ops with a
# wide-tier (D307) spot-check, so it needs the x-wide tier feature; a
# default (narrow) build therefore skips it.
[[test]]
name = "sanity"
required-features = ["x-wide"]
