[package]
name = "golden-competitors"
version = "0.1.0"
edition = "2021"
publish = false
description = "competitor decimal-library subjects + comparison runs for the decimal-scaled-golden harness"
license = "MIT OR Apache-2.0"

# Competitor libraries live ONLY here (never in the core library or the agnostic
# harness). Comparison runs carry the decimal-scaled subjects too, via
# decimal-scale-test, so each competitor is graded side-by-side against
# decimal-scaled on the same golden set. The set mirrors the libraries the perf
# benches compare against.
[dependencies]
decimal-scale-test = { path = "../decimal-scale-test" }
decimal-scaled-golden = { path = "../decimal-scaled-golden" }

rust_decimal = { version = "1", default-features = false, features = ["maths"] }
bigdecimal = "0.4"
dashu-float = "0.4"
fastnum = { version = "0.7", default-features = false, features = ["std"] }
decimal-rs = "0.1"
g_math = { version = "0.4", features = ["balanced"] }
