[package]
name = "decimal_scaled_macros"
version = "0.2.5"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Compile-time decimal literal proc-macros (`d9!`, `d18!`, `d38!`, `d76!`, `d153!`, `d307!`) for the decimal-scaled crate."
repository = "https://github.com/mootable/decimal-scaled"
homepage = "https://github.com/mootable/decimal-scaled"
documentation = "https://mootable.github.io/decimal-scaled/"
readme = "README.md"
keywords = ["decimal", "fixed-point", "macros", "proc-macro", "no-std"]
categories = ["mathematics", "no-std", "rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
