[package]
name = "decimal_scaled_macros"
version = "0.4.3"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Compile-time decimal literal proc-macros (`d9!`, `d18!`, `d38!`, `d76!`, `d153!`, `d307!`) for the decimal-scaled crate."
repository = "https://github.com/mootable/decimal-scaled"
homepage = "https://github.com/mootable/decimal-scaled"
documentation = "https://mootable.github.io/decimal-scaled/"
readme = "README.md"
keywords = ["decimal", "fixed-point", "macros", "proc-macro", "no-std"]
categories = ["mathematics", "no-std", "rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# Resolves the consuming crate's actual import name for
# `decimal-scaled` at expansion time, so the emitted
# `::<name>::DXX::<…>::from_bits(…)` path works even when the
# consumer aliases the dep (`decimal-scaled = { package = "…" }`
# or any Cargo rename). Falls back to `::decimal_scaled` if not
# found in the consumer's direct deps — same behaviour as the
# original hard-coded path. See the README's "consumer crate
# requirements" section for the unavoidable direct-dep rule.
proc-macro-crate = "3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
