[package]
name = "decimal_scaled_macros"
version = "0.5.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Compile-time decimal literal proc-macros for the decimal-scaled crate — one per width tier (`d18!`, `d38!`, `d57!`, `d76!`, `d115!`, `d153!`, `d230!`, `d307!`, `d462!`, `d616!`, `d924!`, `d1232!`)."
repository = "https://github.com/mootable/decimal-scaled"
homepage = "https://github.com/mootable/decimal-scaled"
documentation = "https://mootable.github.io/decimal-scaled/"
readme = "README.md"
keywords = ["decimal", "fixed-point", "macros", "proc-macro", "no-std"]
categories = ["mathematics", "no-std", "rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
syn = { version = "3", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# Resolves the consuming crate's actual import name for
# `decimal-scaled` at expansion time, so the emitted
# `::<name>::DXX::<…>::from_bits(…)` path works even when the
# consumer aliases the dep (`decimal-scaled = { package = "…" }`
# or any Cargo rename). Falls back to `::decimal_scaled` if not
# found in the consumer's direct deps — same behaviour as the
# original hard-coded path. See the README's "consumer crate
# requirements" section for the unavoidable direct-dep rule.
proc-macro-crate = "3"
# Disambiguates a consumer that pins SEVERAL `decimal-scaled`
# versions under Cargo renames beside the live dep (the
# version-history test crate carries `ds-044`/`ds-033`):
# `crate_name` returns whichever match it meets first, so the
# manifest is probed directly for the un-renamed key. Already a
# transitive dep of proc-macro-crate — no extra build cost.
toml_edit = "0.25"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
# The crate is 100% safe Rust; keep it that way.
unsafe_code = "forbid"
